formatting changes for new code standards. simplify some code too